[LIGO-985] Fix overflow on lsp hover actions
Problem: during lsp hover actions on top of the editor
there was a problem that part of the problem was not visible

Solution: change overwlow selectors to be able for
hover message to be on top of other elements

--- a/tools/webide-new/ligo-webide-frontend/ligo-ide/src/base-components/navbar/styles.scss
+++ b/tools/webide-new/ligo-webide-frontend/ligo-ide/src/base-components/navbar/styles.scss
@@ -3,7 +3,7 @@
   top: 0;
   padding: 0;
   border-bottom: 1px solid var(--color-border);
-  z-index: 1000;
+  z-index: 10;
   flex: none;
   justify-content: stretch;
   align-items: stretch;
